# claude-buddy

./: README.md  install.sh  pyproject.toml
src/claude_buddy/: __main__.py  cli.py
src/claude_buddy/data/: buddy.md
